--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -26,7 +26,7 @@
 						<div class="fltleft fullwidth">
 							<div class="login-fields" tabindex="0">
 							   <label>User Name</label>
-								<input type="text" class="required" name="username" id="username" maxlength="50" placeholder="Enter your username or email" tabindex="1"/>
+								<input type="text" class="required" name="username" id="username" maxlength="50" placeholder="Enter your username" tabindex="1"/>
 								    <div class="errorMsg" style="display:none" id="usernameerror"></div>
 							</div>
 							<div class="login-fields">
@@ -49,7 +49,7 @@
 							<div class="login-button">
 							  <input type="submit" value="Log In" id="loginsubmit" tabindex="-1">
 							</div> 
-   							<div class="forgotpassword"><a id="forgotpwdtext">Forgot Password?</a></div> 
+   							<!--<div class="forgotpassword"><a id="forgotpwdtext">Forgot Password?</a></div>-->
                          </div>                                             
 					</form>	
 							<div class="forgot-line" id="forgotpassworddiv" style="display:none;">
