--- a/application/modules/default/views/scripts/appraisalinit/constructreportacc.ajax.phtml
+++ b/application/modules/default/views/scripts/appraisalinit/constructreportacc.ajax.phtml
@@ -56,7 +56,7 @@ if(!empty($exist_data))
 					<span class="desg_txt" title="<?php echo $edata['jobtitle_name'];?>"><?php echo ($jobtitle_length<=17)?$jobtitle:substr($jobtitle,0,15) . '...';?></span>
 				</div>
 				</div>			
-				<span class="emp_name_span l1_manager_span">L1 Manager</span>
+				<span class="emp_name_span l1_manager_span">Line Manager</span>
 				<input type="hidden" id="idhid_init_<?php echo $i;?>" value="<?php echo $init_id;?>" class="hidinit_ac" />                
 				<input type="hidden" id="idhid_manager_<?php echo $i;?>" value="<?php echo $edata['user_id'];?>" class="hidmanager_ac"  />
 				<input type="hidden" id="idhid_flag_<?php echo $i;?>" value="<?php echo !empty($edata['manager_levels'])?"view":"add";?>" class="hidflag_ac"  />
@@ -187,17 +187,19 @@ $(document).ready(function()
             }
         });
     });//end of btn_discard
+
+    /* We only use "L1" managers, this confirmation is unnecessary */
 	$('#btnsaveorg').click(function(){
-		jConfirm("Only L1 managers will be saved. Do you wish to continue?","confirm", function(r) {
+		/*jConfirm("Only L1 managers will be saved. Do you wish to continue?","confirm", function(r) {
 			if(r==true)
 			{
-				$("#sbtnsaveorg").trigger("click");
+				*/$("#sbtnsaveorg").trigger("click");/*
 			}
 			else
 			{
 				return false;
 			}
-		});
+		});*/
 	});
 });//end of ready function
 </script> 
