--- a/application/modules/default/views/scripts/appraisalinit/displaycontentreportacc.ajax.phtml
+++ b/application/modules/default/views/scripts/appraisalinit/displaycontentreportacc.ajax.phtml
@@ -48,7 +48,7 @@ if(isset($init_data[0]['status']) && $init_data[0]['status']==1 && $init_data[0]
 <?php } else {?>
 <div class="left-user left-user-full-width">     
 <?php } ?>
-        <h3 class="cofig_man_fild_title">Employees under L1 Manager</h3>
+        <h3 class="cofig_man_fild_title">Employees under Line Manager</h3>
         <div class="users_list_left" >
 <?php
     if(count($content) > 0)
@@ -99,7 +99,7 @@ if($context != 'view')
 {
 	if(isset($init_data[0]['status']) && $init_data[0]['status']==1 && $init_data[0]['initialize_status']!=1){  	
 ?>
-	<div class="cofig_man_filds">
+	<div class="cofig_man_filds" style="visibility:hidden">
 		<h3 class="cofig_man_fild_title">Configure Line Managers</h3>
 		<div class="new-form-ui">
 			<label>Select Appraisal Levels</label>
@@ -153,7 +153,7 @@ else
 							<span class="emp_id" title="<?php echo $emp['employeeId'];?>">(<?php echo $emp['employeeId'];?>)</span>
 							<span class="desg_txt" title="<?php echo $emp['jobtitle_name'];?>" ><?php echo ($jobtitle_length<=17)?$jobtitle : substr($jobtitle,0,15) . '...';?></span>
 						</div>
-						<span class="emp_name_span l1_manager_span">L<?php echo $i;?> Manager</span>
+						<span class="emp_name_span l1_manager_span">Line <?php echo $i;?> Manager</span>
 						<div class="clear"></div>
 					</div>
 	<?php     
