hiding unnecessary stuff

--- a/application/layouts/scripts/hrmsheader.phtml
+++ b/application/layouts/scripts/hrmsheader.phtml
@@ -897,7 +897,7 @@ else
                 <img src="<?php echo $orgLogoImg; ?>" onerror="this.src='<?php echo MEDIA_PATH; ?>images/hrms-logo-new.png'">
             </a> <!-- added by sapplica -->
          
-				<?php sapp_Helper::createNew($loginUserId);?>	
+				<!--<?php sapp_Helper::createNew($loginUserId);?>-->
 				
             <div class="links">    					
                 <a class="userprofilepic" id="logoutbutton"> 
