--- a/application/layouts/scripts/hrmsfooter.phtml
+++ b/application/layouts/scripts/hrmsfooter.phtml
@@ -39,14 +39,15 @@
 				<div id="dialog" title="Confirmation Required" style="display: none; box-shadow: 0 3px 3px rgba(0, 0, 0, 0); min-height:20px !important; padding-top: 15px;">
 				    <div id="dialogText"></div> 
                  </div>
-				<div class="footerdivbg"> <!-- added by sapplica -->
-					<?php if($auth->hasIdentity()) {?>
-					<a class="settings" href="<?php echo BASE_URL; ?>viewsettings/1">
-						<img width="18" height="19" border="0" src="<?php echo MEDIA_PATH; ?>images/settings_icon.png"  title="Widgets" />
-                    </a>                     					
+				<!--<div class="footerdivbg">-->
+					<?php 
+                        if($auth->hasIdentity()) {?>
+					<!--<a class="settings" href="<?php /*echo BASE_URL;*/ ?>viewsettings/1">
+						<img width="18" height="19" border="0" src="<?php /*echo MEDIA_PATH;*/ ?>images/settings_icon.png"  title="Widgets" />
+                    </a>-->                     					
                     <!-- Added by sapplica Here we are displaying the recently clicked tabs by the user -->					
-						<?php $this->recentlyviewed(); ?>
-				</div>
+						<?php /*$this->recentlyviewed(); */?>
+				<!--</div>-->
                 
 		</div>
 		<?php } ?>
