--- a/application/modules/default/views/scripts/appraisalhistoryself/view.phtml
+++ b/application/modules/default/views/scripts/appraisalhistoryself/view.phtml
@@ -35,6 +35,7 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
 	$empRatData = $this->appEmpRatingsData;
 	$catData = $this->categories_data;
 	$qData = $this->questions_data;
+	$qpData = $this->question_previs;
 	$empRes = $this->emp_response;
 	$mgrRes = $this->mgr_response;
 	$ratVal = $this->ratingValues;
@@ -175,14 +176,14 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
 					<table width="100%" border="0" cellspacing="0" cellpadding="0" style="clear:both;" class="employee_appraisal-table">
 						<thead>
 							<tr>
-									<th>Question</th>
+									<th></th>
 									<!-- <th>Description</th> -->
 								<?php if(in_array($appStatus, array(APP_PENDING_EMP,APP_PENDING_L1))){?>
 									<th>Rating</th>
 									<th>Comments</th>
 								<?php } else {?>
-									<th>Employee Rating</th>
-									<th>Manager Rating</th>
+									<th>Employee Rating/Comments</th>
+									<th>Manager Rating/Comments</th>
 								<?php }?>
 							</tr>
 						</thead>
@@ -193,16 +194,21 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
 							{
 								foreach ($qData as $qd)
 								{
-									
+                                    $priv_data = $qpData[$qd['id']];
 									if($cd['id'] == $qd['pa_category_id'])
 									{
 										$tmpQuestionsFlag = 1;
-							?>						
+							?>
 										<tr>
 											<td>
 												<div>
-													<span class="appri_ques"><?php echo $qd['question'];?></span>
-													<span class="appri_desc"><?php echo $qd['description'];?></span>
+                                                    <?php if($qd['pa_type_id'] == QUESTION_TYPE_OBJECTIVE){ ?>
+                                                        <span class="appri_ques"><?php echo $qd['question'];?></span>
+                                                        <span class="appri_desc"><?php echo isset($mgrRes[$qd['id']]['objective'])?$mgrRes[$qd['id']]['objective']:'';?></span>
+                                                    <?php } else { ?>
+                                                        <span class="appri_ques"><?php echo $qd['question'];?></span>
+                                                        <span class="appri_desc"><?php echo $qd['description'];?></span>
+                                                    <?php } ?>
 												</div>
 											</td>
 											<!-- <td><?php //echo $qd['description'];?></td> -->
@@ -219,7 +225,9 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
 														<span  class="appri_numb"><?php if(isset($empRes[$qd['id']]['rating_id']) && isset($ratVal[$empRes[$qd['id']]['rating_id']])){echo $ratVal[$empRes[$qd['id']]['rating_id']];}?></span>
 														<span><?php if(isset($empRes[$qd['id']]['rating_id']) && isset($ratVal[$empRes[$qd['id']]['rating_id']])){echo $this->ratingTextDisplay[$empRes[$qd['id']]['rating_id']];}?></span>
 													</div>
-													<div><?php if(isset($empRes[$qd['id']]['comment'])){echo $empRes[$qd['id']]['comment'];}?></div>
+                                                    <div><?php if(isset($empRes[$qd['id']]['achievement'])){echo $empRes[$qd['id']]['achievement'];}?></div>
+                                                    <div><?php if(isset($empRes[$qd['id']]['comment'])){echo $empRes[$qd['id']]['comment'];}?></div>
+                                                    <div><?php if($priv_data['ER'] == 0 && $priv_data['EC'] == 0){echo "(not applicable)";} ?></div>
 												</td>
 												<td>
 													<div>
@@ -254,7 +262,9 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
 														?>
 														</span>
 													</div>
-													<div><?php if(isset($mgrRes[$qd['id']]['comment'])){echo $mgrRes[$qd['id']]['comment'];}?></div>
+                                                    <div><?php if(isset($mgrRes[$qd['id']]['achievement'])){echo $mgrRes[$qd['id']]['achievement'];}?></div>
+                                                    <div><?php if(isset($mgrRes[$qd['id']]['comment'])){echo $mgrRes[$qd['id']]['comment'];}?></div>
+                                                    <div><?php if($priv_data['MR'] == 0 && $priv_data['MC'] == 0){echo "(not applicable)";} ?></div>
 												</td>
 											<?php }?>
 										</tr>				
